# bipedalsim

./: .gitignore  CMakeLists.txt  README.md  bridge.yaml  main.cpp
Inc/: config.hpp  kalmanfilter.hpp  lqr.hpp  odom.hpp  plotter.hpp  quaternion_ekf.hpp  vmc.hpp
controller/: CMakeLists.txt  package.xml
controller/include/controller/: controller.hpp  kalmanfilter.hpp  lqr.hpp  pid.hpp  vmc.hpp
controller/launch/: controller.launch.py
controller/src/: controller.cpp
lowlevel/: CMakeLists.txt  package.xml
lowlevel/include/lowlevel/: lowlevel.hpp
lowlevel/msg/: IMU.msg  MotorFdb.msg  RobotFdb.msg
lowlevel/src/: keyboard_controller.cpp  lowlevel.cpp
matlab/: k.m  lqr.m  vmc.m
mjcf/: bipedal.xml  wbr_cod.xml
model/: bipedal.sdf  friction_simple_test.sdf  test.sdf  testf.sdf
model/meshes/: DoubleStair.stl  bumps.stl  fly_slope.stl
